--- a/JavaScript Dom/6-eventlisteners/event-listeners.html
+++ b/JavaScript Dom/6-eventlisteners/event-listeners.html
@@ -44,20 +44,20 @@
 
         "use strict";
         
-        let sonuc;
+        var sonuc;
 
-        let gorevListesi = [
+        var gorevListesi = [
             {"id": 1, "gorevAdi": "Görev 1"},
             {"id": 2, "gorevAdi": "Görev 2"},
             {"id": 3, "gorevAdi": "Görev 3"},
             {"id": 4, "gorevAdi": "Görev 4"},
         ];
 
-        let ul = document.getElementById("task-list");
+        var ul = document.getElementById("task-list");
 
-        for(let gorev of gorevListesi) {
+        for(var gorev of gorevListesi) {
 
-            let li = `
+            var li = `
                 <li class="task list-group-item">
                     <div class="form-check">
                         <input type="checkbox" id="${gorev.id}" class="form-check-input">
