--- a/JavaScript Dom/2-cokluelementsecimi/coklu-elementler.html
+++ b/JavaScript Dom/2-cokluelementsecimi/coklu-elementler.html
@@ -29,7 +29,7 @@
         var sonuc;
 
         sonuc = document.getElementsByClassName("task")[0]; //classı task olan elementin 0. indexe sahip elemanını seçer.
-        sonuc = document.getElementsByClassName("task")[1]; 
+        sonuc = document.getElementsByClassName("task")[1]; //classı task olan elementin 1. indexe sahip elemanını seçer.
 
         // taskList = document.getElementsByClassName("task"); 
         // ul = document.getElementById("task-list");
